adding new python file

--- a/myProgram/first.ipynb
+++ b/myProgram/first.ipynb
@@ -41,10 +41,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6a5b748a-5455-4e32-a2e2-16c092b6b204",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter the number 4\n",
+      "enter the second number 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "a= int(input(\"enter the number\"))\n",
     "b=int(input(\"enter the second number\"))\n",
@@ -53,8 +69,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4c05ea41-c638-417c-9838-38c6eaa6dbec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(5//2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0b793082-cb5d-4acb-b994-9eb7ced946e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(8//3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b4d9903-773d-4dc6-92b7-9d566546e478",
    "metadata": {},
    "outputs": [],
    "source": []
