some change in  python file

--- a/All in one till numpy (4).ipynb
+++ b/All in one till numpy (4).ipynb
@@ -2946,28 +2946,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 62,
    "id": "d275592f-0c5f-4b60-a618-4c26aae87116",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1,\n",
-       " 'hello',\n",
-       " 4.5,\n",
-       " [1, 2],\n",
-       " <function print(*args, sep=' ', end='\\n', file=None, flush=False)>]"
-      ]
-     },
-     "execution_count": 285,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 'hello', 4.5, [1, 2], <built-in function print>]\n"
+     ]
     }
    ],
    "source": [
     "L=[1,\"hello\",4.5,[1,2], print]\n",
-    "L"
+    "print(L)"
    ]
   },
   {
@@ -3392,7 +3385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 65,
    "id": "af35251b-7460-47c7-b6b0-02adf9b790ba",
    "metadata": {},
    "outputs": [
@@ -3400,14 +3393,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['apple', 'banana', 'cherry', 'mango']\n"
+      "['apple', 'banana', 1, 'abc']\n"
      ]
     }
    ],
    "source": [
     "#Combining (Concatenating) Lists\n",
     "list1 = [\"apple\", \"banana\"]\n",
-    "list2 = [\"cherry\", \"mango\"]\n",
+    "list2 = [1, \"abc\"]\n",
     "combined = list1 + list2\n",
     "print(combined)"
    ]
@@ -3449,7 +3442,19 @@
    ],
    "source": [
     "L=[i for i in range(1,11)]\n",
-    "print(L)"
+    "print(L) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d151f62e-f7aa-4040-abff-0c6e30b01ea4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#List Comprehension\n",
+    "#Syntax\n",
+    "# [expression for item in iterable if condition]"
    ]
   },
   {
@@ -3474,11 +3479,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "cdf69490-03e6-4cd7-9d6d-f6e9d4ace04c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares = []\n",
+    "for x in range(5):\n",
+    "    squares.append(x**2)\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "7835c4c3-05d8-4a87-abb0-f31b8dde58b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[85, 77, 95]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#filter student\n",
+    "marks=[85,42,77,30,95]\n",
+    "passed=[mark for mark in marks if mark >=50]\n",
+    "print(passed)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3501,7 +3540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 71,
    "id": "d8c9ff3a-7e98-446c-93aa-8b3e82978f85",
    "metadata": {},
    "outputs": [
@@ -3524,7 +3563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 72,
    "id": "5f5e1078-b833-4b84-8ce1-fb141a9246c2",
    "metadata": {},
    "outputs": [
@@ -3935,7 +3974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 73,
    "id": "13013d37-4ba0-425e-b3f1-796351a7f5f1",
    "metadata": {},
    "outputs": [
@@ -3943,8 +3982,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alice\n",
       "30\n",
+      "Alice\n",
       "Engineer\n"
      ]
     }
