--- a/Python Exercise Questions 1.ipynb
+++ b/Python Exercise Questions 1.ipynb
@@ -949,7 +949,11 @@
    "source": [
     "s = input(\"Enter a string: \")\n",
     "vowels = \"aeiouAEIOU\"\n",
-    "\n"
+    "for i in s:\n",
+    "    if i in vowels:\n",
+    "        s=s.replace(i,\"*\")\n",
+    "\n",
+    "print(s) \n"
    ]
   },
   {
@@ -962,12 +966,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "9df1949f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter full name:  Aman Patel\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initials: AP\n"
+     ]
+    }
+   ],
    "source": [
-    "name = input(\"Enter full name: \")\n"
+    "name = input(\"Enter full name: \")\n",
+    "words = name.split()\n",
+    "\n",
+    "i = \"\"\n",
+    "for word in words:\n",
+    "    i += word[0].upper()\n",
+    "\n",
+    "print(\"Initials:\", i)\n"
    ]
   },
   {
