some change in  python file

--- a/All in one till numpy (4).ipynb
+++ b/All in one till numpy (4).ipynb
@@ -4378,7 +4378,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Advantages of Sets in Python\n"
+    "Advantages of Sets in Python\n",
+    "# set is mutable because we can add and remove element from set.\n",
+    "# frozenset is type of set which is immutable because it can add and remove element \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "988960d2-0732-46bd-bafb-350a62b6857e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'frozenset' object has no attribute 'add'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m fs=\u001b[38;5;28mfrozenset\u001b[39m({\u001b[32m1\u001b[39m,\u001b[32m2\u001b[39m,\u001b[32m3\u001b[39m,\u001b[32m4\u001b[39m})\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mfs\u001b[49m\u001b[43m.\u001b[49m\u001b[43madd\u001b[49m(\u001b[32m5\u001b[39m,\u001b[32m6\u001b[39m)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(fs)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'frozenset' object has no attribute 'add'"
+     ]
+    }
+   ],
+   "source": [
+    "fs=frozenset({1,2,3,4})\n",
+    "fs.add(5,6) #❌ frozenset is immutable\n",
+    "print(fs)\n"
    ]
   },
   {
@@ -4554,10 +4580,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "id": "3b4a3ad9-3fce-46e2-bd66-53204e526570",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'student' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#Looping Through a Dictionary\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m#Loop through keys:\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[43mstudent\u001b[49m:\n\u001b[32m      4\u001b[39m     \u001b[38;5;28mprint\u001b[39m(key, student[key])\n",
+      "\u001b[31mNameError\u001b[39m: name 'student' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Looping Through a Dictionary\n",
     "#Loop through keys:\n",
