read new thing in python

--- a/All in one till numpy (4).ipynb
+++ b/All in one till numpy (4).ipynb
@@ -4965,10 +4965,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8e01a20b-4d14-4822-a16a-a8aa8ddfc01e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3642967409.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mComparison: Normal Function vs Lambda Function\u001b[39m\n                       ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "Comparison: Normal Function vs Lambda Function\n",
     "Normal Function | Lambda Function\n",
@@ -5013,7 +5022,7 @@
     }
    ],
    "source": [
-    "#ambda Function with filter()\n",
+    "#lambda Function with filter()\n",
     "numbers = [1, 2, 3, 4, 5, 6]\n",
     "\n",
     "even_numbers = list(filter(lambda x: x % 2 == 0, numbers))\n",
@@ -5105,7 +5114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 10,
    "id": "f57ec220-e300-4c68-ad49-de87a7f8c3dc",
    "metadata": {},
    "outputs": [
@@ -5131,7 +5140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 8,
    "id": "ac396bea-7f50-4aae-907c-2dfcc7025637",
    "metadata": {},
    "outputs": [
@@ -5345,7 +5354,7 @@
     }
    ],
    "source": [
-    "#Using with Statement (No need to close manually)\n",
+    "#Using \"with\" Statement (No need to close manually)\n",
     "with open(\"sample.txt\", \"r\") as file:        # Safe way to handle files\n",
     "    content = file.read()\n",
     "    print(content)"
@@ -5353,7 +5362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "id": "c8a2d795-2b18-4e51-822c-2b967431af04",
    "metadata": {},
    "outputs": [
@@ -5363,7 +5372,7 @@
        "['John', 'Sara', 'Mike']"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5375,6 +5384,45 @@
     "with open(\"attendance.txt\", \"w\") as file:\n",
     "    for student in students:\n",
     "        file.write(student + \"\\n\")\n",
+    "students"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c7e3d7be-8e99-438c-8cb0-dd530d07bdd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Aman\n",
+      "Sara Aman\n",
+      "Mike Aman\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['John', 'Sara', 'Mike']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "students = [\"John\", \"Sara\", \"Mike\"]\n",
+    "\n",
+    "with open(\"attendance.txt\", \"w\") as file:\n",
+    "    for student in students:\n",
+    "        file.write(student + \" Aman\\n\")\n",
+    "with open(\"attendance.txt\") as file:\n",
+    "    content = file.read()\n",
+    "    print(content)        \n",
     "students"
    ]
   },
