--- a/List_exercise.ipynb
+++ b/List_exercise.ipynb
@@ -99,8 +99,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f76f66a0-0344-4605-b317-ad2b4a8c0108",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The in operator works on tuples and sets.\n",
+    "my_set = {1, 2, 3}\n",
+    "print(2 in my_set)  \n",
+    "print(4 in my_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f85b5ac-d1b9-4af3-becf-482c3a862419",
    "metadata": {},
    "outputs": [],
    "source": []
