adding file for numpy and pandas

--- a/Python_solution_mine.ipynb
+++ b/Python_solution_mine.ipynb
@@ -1,9 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "be45df3d",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c4d6ca0-5e85-4109-bcf3-00d479dfcd10",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Python Exercises:\n",
     "\n",
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "ca1019b9",
    "metadata": {},
    "outputs": [
@@ -66,14 +68,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter Your Name Aman Patel\n"
+      "Enter Your Name aman \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Aman Patel Good Morning\n"
+      "Hello aman  Good Morning\n"
      ]
     }
    ],
